OpenVPN password is not saved
After updating from 1.16.0 to 1.18.0 the password stored in connection settings was lost and can't be saved now. At least via applet it does not work.
Open connection settings, VPN tab, Authentication type: password, input fields "User name" and "Password". After you type in the password and click "Save", it is not saved.